addons/biza-admin/base/resources/appliance-admin-definition.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: administration
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appliance-admin
  name: appliance-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appliance-admin
  template:
    metadata:
      labels:
        app: appliance-admin
    spec:
      serviceAccountName: admin-serviceaccount
      containers:
        - image: images.onbiza.net/appliance_admin:latest
          imagePullPolicy: Always
          name: appliance-admin
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          configMap:
            name: admin-app-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appliance-admin
  name: appliance-admin-service
  namespace: administration
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9105
      targetPort: 3000
  selector:
    app: appliance-admin
