addons/biza-admin/base/resources/og-admin-definition.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: administration
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: og-admin
  name: og-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: og-admin
  template:
    metadata:
      labels:
        app: og-admin
    spec:
      serviceAccountName: admin-serviceaccount
      containers:
        - image: images.onbiza.net/dsaas_admin:latest
          imagePullPolicy: Always
          name: og-admin
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: deployments
              mountPath: /app/config/deployments
      volumes:
        - name: config
          configMap:
            name: admin-app-config
        - name: deployments
          configMap:
            name: admin-app-deployment-config


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: og-admin
  name: og-admin-service
  namespace: administration
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9105
      targetPort: 3000
  selector:
    app: og-admin
